# kand

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_feature_request.yaml  3_question.yaml  config.yml
.github/workflows/: CI.yml  changelog.yml  doc.yml  docker-publish.yml  publish-doc.yml  publish-docker.yml  publish-rust.yml  release.yml  rust.yml  test-rust.yml
docs/: about.md  advance.md  api.md  index.md  install.md  performance.md
kand/: Cargo.toml
kand-py/: Cargo.toml  pyproject.toml
kand-py/src/: lib.rs
kand-py/src/ta/: mod.rs
kand-py/src/ta/ohlcv/: ad.rs  adosc.rs  adr.rs  adx.rs  adxr.rs  apo.rs  aroon.rs  aroonosc.rs  atr.rs  bbands.rs  bop.rs  cci.rs  cdl_doji.rs  cdl_dragonfly_doji.rs  cdl_gravestone_doji.rs  cdl_hammer.rs  cdl_inverted_hammer.rs  cdl_long_shadow.rs  cdl_marubozu.rs  dema.rs  dx.rs  ecl.rs  ema.rs  macd.rs  medprice.rs  mfi.rs  midpoint.rs  midprice.rs  minus_di.rs  minus_dm.rs  mod.rs  mom.rs  natr.rs  obv.rs  plus_di.rs  plus_dm.rs  ppo.rs  rma.rs  roc.rs  rocp.rs  (+18 more)
kand-py/src/ta/stats/: fv.rs  max.rs  min.rs  mod.rs  stddev.rs  sum.rs  var.rs
kand/benches/: bench_main.rs  helper.rs
kand/benches/benchmarks/: mod.rs
kand/benches/benchmarks/ohlcv/: ad_bench.rs  adosc_bench.rs  adr_bench.rs  adx_bench.rs  adxr_bench.rs  apo_bench.rs  aroon_bench.rs  aroonosc_bench.rs  atr_bench.rs  bbands_bench.rs  bop_bench.rs  cci_bench.rs  cdl_doji_bench.rs  cdl_dragonfly_doji_bench.rs  cdl_gravestone_doji_bench.rs  cdl_hammer_bench.rs  cdl_inverted_hammer_bench.rs  cdl_long_shadow_bench.rs  cdl_marubozu_bench.rs  cmo_bench.rs  dema_bench.rs  dx_bench.rs  ecl_bench.rs  ema_bench.rs  ht_dcperiod_bench.rs  ht_dcphase_bench.rs  ht_phasor_bench.rs  ht_sine_bench.rs  ht_trendline_bench.rs  ht_trendmode_bench.rs  kama_bench.rs  linearreg_angle_bench.rs  linearreg_bench.rs  linearreg_intercept_bench.rs  linearreg_slope_bench.rs  macd_bench.rs  macdext_bench.rs  mama_bench.rs  medprice_bench.rs  mfi_bench.rs  (+39 more)
kand/benches/benchmarks/stats/: beta_bench.rs  correl_bench.rs  max_bench.rs  min_bench.rs  mod.rs  stddev_bench.rs  sum_bench.rs  var_bench.rs
kand/examples/: sma.rs
kand/src/: error.rs  helper.rs  lib.rs
kand/src/ta/: mod.rs  types.rs
kand/src/ta/ohlcv/: ad.rs  adosc.rs  adr.rs  adx.rs  adxr.rs  aroon.rs  aroonosc.rs  atr.rs  bbands.rs  bop.rs  cci.rs  cdl_doji.rs  cdl_dragonfly_doji.rs  cdl_gravestone_doji.rs  cdl_hammer.rs  cdl_inverted_hammer.rs  cdl_long_shadow.rs  cdl_marubozu.rs  dema.rs  dx.rs  ecl.rs  ema.rs  ha.rs  ht_dcperiod.rs  kdj.rs  macd.rs  medprice.rs  mfi.rs  midpoint.rs  midprice.rs  minus_di.rs  minus_dm.rs  mod.rs  mom.rs  natr.rs  obv.rs  plus_di.rs  plus_dm.rs  renko.rs  rma.rs  (+21 more)
kand/src/ta/stats/: fv.rs  kelly.rs  max.rs  min.rs  nper.rs  ret.rs  sharpe.rs  stddev.rs  sum.rs  var.rs
python/benches/: bench_ema.py  bench_ema_mt.py  ema.py
python/examples/: sma.py  sma_thread.py
python/kand/: __init__.py  _kand.pyi  demo.py
scripts/: gen_stub.py
