[package]
name = "kand"
version = "0.1.0"
edition = "2021"
authors = ["CtrlX <gitctrlx@gmail.com>"]
description = "Kand: A Pure Rust technical analysis library inspired by TA-Lib."
license = "MIT"
repository = "https://github.com/rust-ta/kand"
documentation = "https://docs.rs/kand"
keywords = ["technical-analysis", "finance", "rust", "talib", "indicators"]
categories = ["finance", "algorithms", "data-structures", "science", "mathematics"]

[dependencies]
num-traits = { workspace = true }
num_enum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
csv = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }

[[bench]]
name = "bench_main"
harness = false

[features]
default    = ["float64", "int64", "check"]
float32    = []
float64    = []
int32      = []
int64      = []
check      = []
deep-check = ["check"]
required-features = ["int32", "int64"]
