[package]
name = "kand"
version = "0.1.4"
edition = "2024"
authors = ["CtrlX <gitctrlx@gmail.com>"]
readme = "../README.md"
description = "Kand: A Pure Rust technical analysis library inspired by TA-Lib."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/rust-ta/kand"
documentation = "https://docs.rs/kand"
keywords = ["technical-analysis", "finance", "rust", "talib", "indicators"]
categories = ["finance", "algorithms", "data-structures", "science", "mathematics"]

[dependencies]
num-traits = { workspace = true }
num_enum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
csv = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }

[[bench]]
name = "bench_main"
harness = false

[features]
default = ["extended", "check"]     # Default: extended precision with basic checks
standard = ["f32", "i32"]          # Standard precision mode (32-bit)
extended = ["f64", "i64"]          # Extended precision mode (64-bit)
f32 = []                           # 32-bit floating point
f64 = []                           # 64-bit floating point
i32 = []                           # 32-bit integer
i64 = []                           # 64-bit integer
check = []                         # Basic validation checks
deep-check = ["check"]             # Extended validation checks
